修改pnpm需要的版本@v8.14.1

--- a/.github/workflows/release-ios.yml
+++ b/.github/workflows/release-ios.yml
@@ -54,7 +54,7 @@ jobs:
           node-version: 18
 
       - name: Install Node pnpm
-        run: npm install -g pnpm
+        run: npm install -g pnpm@v8.14.1
         working-directory: ${{ github.workspace }}/siyuan-note/siyuan/app
 
       - name: Install Node Dependencies
