--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           path: siyuan-note
-
+      # 新增dockerfile版本修改
       - name: clone origin and apply patches
         run: |
           mkdir -p ${{ github.workspace }}/go
@@ -47,6 +47,7 @@ jobs:
 
           git apply ${{ github.workspace }}/siyuan-note/patches/siyuan/disable-update.patch
           git apply ${{ github.workspace }}/siyuan-note/patches/siyuan/mock-vip-user.patch
+          git apply ${{ github.workspace }}/siyuan-note/patches/siyuan/dockerfile.patch
 
           git status
 
