--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -40,7 +40,6 @@ jobs:
           cd siyuan-android
 
           git apply ${{ github.workspace }}/siyuan-note/patches/siyuan-android/debug-build.patch
-          git apply ${{ github.workspace }}/siyuan-note/patches/siyuan-android/buildrelease.patch
 
           mkdir -p app/src/main/assets/
           mkdir -p app/libs/
@@ -107,7 +106,8 @@ jobs:
         working-directory: ${{ github.workspace }}/siyuan-note/siyuan-android
         run: |
           chmod 777 ./gradlew
-          ./gradlew clean buildReleaseTask
+          ./gradlew clean
+          ./gradlew assembleOfficialDebug
           
           ls ${{ github.workspace }}/siyuan-note/siyuan-android/app/build/outputs/apk/debug
         env:
