安卓同步上游分支

--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -110,6 +110,9 @@ jobs:
         run: |
           chmod 777 ./gradlew
           ./gradlew :app:assembleDebug
+          
+          
+          ls ${{ github.workspace }}/siyuan-note/siyuan-android/app/build/outputs/apk/googleplay/debug
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 
