--- a/.github/workflows/release-android.yml
+++ b/.github/workflows/release-android.yml
@@ -130,5 +130,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_current_release.outputs.upload_url }}
           asset_name: siyuan-${{ github.event.inputs.version }}-android-arm64.apk
-          asset_path: ${{ github.workspace }}/siyuan-note/siyuan-android/app/build/outputs/apk/googleplay/debug/siyuan-*.apk
+          asset_path: ${{ github.workspace }}/siyuan-note/siyuan-android/app/build/outputs/apk/googleplay/debug/siyuan-666-googleplay-debug.apk
           asset_content_type: application/octet-stream
